k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tp-cicd
  labels:
    app: tp-cicd
