k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tp-cicd
  labels:
    app: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
