k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: tp-cicd
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
